objects/vlocity_ins__Element__c.object
<CustomObject>
    <description>Vlocity OmniScript Elements are the components which make up an OmniScript.</description>
    <fields>
        <fullName>vlocity_ins__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InternalNotes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Level__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please do not manually modify this field.</inlineHelpText>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptId__c</fullName>
        <label>OmniScript</label>
        <referenceTo>vlocity_ins__OmniScript__c</referenceTo>
        <relationshipName>Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptVersion__c</fullName>
        <formula>vlocity_ins__OmniScriptId__r.vlocity_ins__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScript Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Element</label>
        <referenceTo>vlocity_ins__Element__c</referenceTo>
        <relationshipName>Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentElementName__c</fullName>
        <formula>vlocity_ins__ParentElementId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentElementType__c</fullName>
        <formula>TEXT(vlocity_ins__ParentElementId__r.vlocity_ins__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Element Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PropertySet__c</fullName>
        <label>Property Set</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReusableOmniScript__c</fullName>
        <formula>vlocity_ins__OmniScriptId__r.vlocity_ins__IsReusable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reusable OmniScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SearchKey__c</fullName>
        <inlineHelpText>Please do not manually modify this field.</inlineHelpText>
        <label>Search Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Calculation Action</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Conditional Block</fullName>
                </value>
                <value>
                    <fullName>Custom Lightning Web Component</fullName>
                </value>
                <value>
                    <fullName>Loop Block</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>DataRaptor Extract Action</fullName>
                </value>
                <value>
                    <fullName>DataRaptor Post Action</fullName>
                </value>
                <value>
                    <fullName>DataRaptor Transform Action</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time (Local)</fullName>
                </value>
                <value>
                    <fullName>Delete Action</fullName>
                </value>
                <value>
                    <fullName>Disclosure</fullName>
                </value>
                <value>
                    <fullName>DocuSign Envelope Action</fullName>
                </value>
                <value>
                    <fullName>DocuSign Signature Action</fullName>
                </value>
                <value>
                    <fullName>Done Action</fullName>
                </value>
                <value>
                    <fullName>Edit Block</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Action</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
                <value>
                    <fullName>Filter Block</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Geolocation</fullName>
                </value>
                <value>
                    <fullName>Headline</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Input Block</fullName>
                </value>
                <value>
                    <fullName>Integration Procedure Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity OmniScript Element</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScript Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>